--- a/carreralasalamedas/css/stye.css
+++ b/carreralasalamedas/css/stye.css
@@ -12,7 +12,8 @@
    The ".opera-only" selector is used to prevent actual prefocus styling
    and is not required in markup.
 */
-.opera-only :-o-prefocus, .pure-g {
+.opera-only :-o-prefocus,
+.pure-g {
   word-spacing: -0.43em; }
 
 .pure-u {
@@ -28,7 +29,34 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
-.pure-u-1, .pure-u-1-2, .pure-u-1-3, .pure-u-2-3, .pure-u-1-4, .pure-u-3-4, .pure-u-1-5, .pure-u-2-5, .pure-u-3-5, .pure-u-4-5, .pure-u-1-6, .pure-u-5-6, .pure-u-1-8, .pure-u-3-8, .pure-u-5-8, .pure-u-7-8, .pure-u-1-12, .pure-u-5-12, .pure-u-7-12, .pure-u-11-12, .pure-u-1-24, .pure-u-5-24, .pure-u-7-24, .pure-u-11-24, .pure-u-13-24, .pure-u-17-24, .pure-u-19-24, .pure-u-23-24 {
+.pure-u-1,
+.pure-u-1-2,
+.pure-u-1-3,
+.pure-u-2-3,
+.pure-u-1-4,
+.pure-u-3-4,
+.pure-u-1-5,
+.pure-u-2-5,
+.pure-u-3-5,
+.pure-u-4-5,
+.pure-u-1-6,
+.pure-u-5-6,
+.pure-u-1-8,
+.pure-u-3-8,
+.pure-u-5-8,
+.pure-u-7-8,
+.pure-u-1-12,
+.pure-u-5-12,
+.pure-u-7-12,
+.pure-u-11-12,
+.pure-u-1-24,
+.pure-u-5-24,
+.pure-u-7-24,
+.pure-u-11-24,
+.pure-u-13-24,
+.pure-u-17-24,
+.pure-u-19-24,
+.pure-u-23-24 {
   display: inline-block;
   zoom: 1;
   *display: inline;
@@ -126,9 +154,24 @@
   width: 95.8333%; }
 
 @media (max-width: 800px) {
-  .pure-g div {
-    width: 100%; } }
+  .pure-u-1,
+  .pure-u-1-2,
+  .pure-u-1-3,
+  .pure-u-2-3,
+  .pure-u-1-4,
+  .pure-u-3-4,
+  .pure-u-1-5,
+  .pure-u-2-5,
+  .pure-u-3-5,
+  .pure-u-4-5,
+  .pure-u-1-6,
+  .pure-u-5-6 {
+    width: 100%; }
+
+  .pure-u-1-8 {
+    width: 30%; } }
 body {
+  background: #f5f4f1;
   margin: 0;
   font-family: "Lato";
   font-weight: 400; }
@@ -138,46 +181,67 @@ h2 {
   font-size: 2.3em;
   text-align: center; }
 
+h3 {
+  text-align: center;
+  font-weight: 300; }
+
 img {
   width: auto;
   max-width: 100%;
   height: auto; }
 
 header {
+  background: white;
   padding: 0.5em; }
-header h1.logo-white {
-  margin: 0;
-  display: inline-block;
-  min-height: 78px;
-  min-width: 300px;
-  background: url(../img/logo-carrerawhite.png) no-repeat;
-  background-size: contain;
-  overflow: hidden;
-  text-indent: -3000px; }
+  header h1.logo-white {
+    margin: 0;
+    display: inline-block;
+    min-height: 78px;
+    min-width: 300px;
+    background: url(../img/logo-carrerawhite.png) no-repeat;
+    background-size: contain;
+    overflow: hidden;
+    text-indent: -3000px; }
 
-nav ul {
-  word-spacing: -0.43em;
-  text-align: right; }
-nav ul li {
-  display: inline-block;
-  zoom: 1;
-  *display: inline;
-  /* IE < 8: fake inline-block */
-  letter-spacing: normal;
-  word-spacing: normal;
-  vertical-align: top;
-  text-rendering: auto;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 1em;
-  text-transform: uppercase; }
-nav ul li a {
-  text-decoration: none;
-  color: #333;
-  margin-bottom: 0.5em; }
-nav ul li a:hover {
-  border-bottom: 1px solid #333; }
+.nav-on {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999; }
+
+.nav-container {
+  height: 68px; }
+
+nav {
+  padding: 1px 0;
+  border-bottom: 1px solid #333;
+  box-shadow: 0 0.2em 1em 0 rgba(0, 0, 0, 0.5);
+  background: white;
+  width: 100%; }
+  nav ul {
+    margin: 0;
+    word-spacing: -0.43em;
+    text-align: center; }
+    nav ul li {
+      display: inline-block;
+      zoom: 1;
+      *display: inline;
+      /* IE < 8: fake inline-block */
+      letter-spacing: normal;
+      word-spacing: normal;
+      vertical-align: top;
+      text-rendering: auto;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+      padding: 1em;
+      text-transform: uppercase; }
+      nav ul li a {
+        text-decoration: none;
+        color: #333;
+        margin-bottom: 0.5em; }
+        nav ul li a:hover {
+          border-bottom: 1px solid #333; }
 
 footer {
   background: #333;
@@ -198,48 +262,53 @@ footer {
   color: white;
   text-align: center;
   position: relative; }
-.carrera-hero .logo, .carrera-hero .hero {
-  position: relative; }
-.carrera-hero h2 {
-  font-family: "lato";
-  font-size: 6em;
-  line-height: 90px;
-  margin: 0;
-  text-transform: uppercase; }
-.carrera-hero h2 span {
-  background: #E65100;
-  color: white;
-  display: inline block;
-  padding: 0 0.5em;
-  font-weight: 700;
-  font-size: 0.4em; }
-.carrera-hero p {
-  font-weight: 300;
-  font-size: 2em;
-  margin: .3em; }
+  .carrera-hero .logo, .carrera-hero .hero {
+    position: relative; }
+  .carrera-hero h2 {
+    font-family: "lato";
+    font-size: 6em;
+    line-height: 90px;
+    margin: 0;
+    text-transform: uppercase; }
+    .carrera-hero h2 span {
+      background: #E65100;
+      color: white;
+      display: inline block;
+      padding: 0 0.5em;
+      font-weight: 700;
+      font-size: 0.4em; }
+  .carrera-hero p {
+    font-weight: 300;
+    font-size: 2em;
+    margin: .3em; }
 
 .carrera-datos {
   padding: 1em 0.5em; }
-.carrera-datos .info {
-  padding: .5em; }
-.carrera-datos .jd {
-  text-align: center; }
-.carrera-datos .jd h2 {
-  font-family: "Kaushan Script";
-  color: #000033; }
-.carrera-datos .jd img {
-  max-height: 200px; }
+  .carrera-datos .info {
+    padding: .5em; }
+  .carrera-datos .jd {
+    text-align: center; }
+    .carrera-datos .jd h2 {
+      font-family: "Kaushan Script";
+      color: #000033; }
+    .carrera-datos .jd img {
+      max-height: 200px; }
+
+.inscripcion {
+  color: white;
+  padding: 1em 0;
+  background: #2E486D; }
 
 .valores {
   background: #E65100;
   color: white;
   padding: 1em;
   text-align: center; }
-.valores h2, .valores p {
-  max-width: 800px;
-  margin: 1em auto; }
-.valores p {
-  font-size: 1.5em; }
+  .valores h2, .valores p {
+    max-width: 800px;
+    margin: 1em auto; }
+  .valores p {
+    font-size: 1.5em; }
 
 .greatwall {
   background: #333 no-repeat;
@@ -250,78 +319,105 @@ footer {
   text-align: center;
   margin: 0;
   overflow: hidden; }
-.greatwall div.gw-logo {
-  font-size: 1.5em;
-  font-family: "Kaushan Script";
-  position: relative;
-  background: white;
-  padding: 1em;
-  position: relative; }
-.greatwall div.gw-logo:before {
-  content: " ";
-  top: 0;
-  left: 100%;
-  position: absolute;
-  border-width: 560px 5em 0px 0px;
-  border-color: white transparent;
-  border-style: solid;
-  width: 0;
-  height: 0;
-  -moz-transform: scale(0.9999); }
-.greatwall div.gw-logo p {
-  margin: 0.3em; }
-.greatwall div.gw-hero {
-  padding-left: 5m;
-  position: relative;
-  color: #fff; }
-.greatwall div.gw-hero h2 {
-  font-size: 3em; }
-.greatwall div.gw-hero h2 span {
-  color: #D2FF4D;
-  display: inline-block;
-  border-top: 5px #D2FF4D solid;
-  border-bottom: 5px #D2FF4D solid;
-  padding: 0.1em;
-  margin: 0.1em;
-  font-size: 2em; }
+  .greatwall div.gw-logo {
+    font-size: 1.5em;
+    font-family: "Kaushan Script";
+    position: relative;
+    background: white;
+    padding: 1em;
+    position: relative; }
+    .greatwall div.gw-logo:before {
+      content: " ";
+      top: 0;
+      left: 100%;
+      position: absolute;
+      border-width: 560px 5em 0px 0px;
+      border-color: white transparent;
+      border-style: solid;
+      width: 0;
+      height: 0;
+      -moz-transform: scale(0.9999); }
+    .greatwall div.gw-logo p {
+      margin: 0.3em; }
+  .greatwall div.gw-hero {
+    padding-left: 5m;
+    position: relative;
+    color: #fff; }
+    .greatwall div.gw-hero h2 {
+      font-size: 3em; }
+      .greatwall div.gw-hero h2 span {
+        color: #D2FF4D;
+        display: inline-block;
+        border-top: 5px #D2FF4D solid;
+        border-bottom: 5px #D2FF4D solid;
+        padding: 0.1em;
+        margin: 0.1em;
+        font-size: 2em; }
 
 .contacto {
   background: #333;
   color: white;
   padding: 2em 0; }
-.contacto div {
-  padding: 1em; }
+  .contacto div {
+    padding: 1em; }
+
+.contacto-form form {
+  max-width: 300px;
+  margin: 0 auto; }
+.contacto-form label {
+  text-align: center;
+  display: block;
+  max-width: 300px; }
+.contacto-form input, .contacto-form textarea {
+  display: block;
+  color: #333;
+  margin: 1em 0;
+  padding: 0.5em 0.2em;
+  width: 100%;
+  max-width: 300px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+.contacto-form input[type="submit"] {
+  background: #333;
+  color: #fff;
+  width: 100%;
+  max-width: 300px; }
+.contacto-form textarea {
+  min-height: 120px; }
 
 .contacto-datos ul {
   padding: 0;
   list-style: none;
   max-width: 600px;
   margin: 0 auto; }
-.contacto-datos ul li {
-  font-weight: 700; }
-.contacto-datos ul li .icon-facebook:before {
-  content: ""; }
-.contacto-datos ul li li {
-  display: inline-block;
-  height: 24px;
-  font-weight: 400;
-  line-height: 24px;
-  margin-left: 30px;
-  padding: 0.6em  0.8em 0.8em 0;
-  position: relative; }
-.contacto-datos ul li li:before {
-  background: white;
-  border-radius: 50%;
-  color: #333;
-  left: -30px;
-  line-height: 24px;
-  text-align: center;
-  height: 24px;
-  width: 24px;
-  position: absolute;
-  top: .6em; }
+  .contacto-datos ul li {
+    font-weight: 700; }
+    .contacto-datos ul li .icon-facebook:before {
+      content: ""; }
+    .contacto-datos ul li li {
+      display: inline-block;
+      height: 24px;
+      font-weight: 400;
+      line-height: 24px;
+      margin-left: 30px;
+      padding: 0.6em  0.8em 0.8em 0;
+      position: relative; }
+      .contacto-datos ul li li:before {
+        background: white;
+        border-radius: 50%;
+        color: #333;
+        left: -30px;
+        line-height: 24px;
+        text-align: center;
+        height: 24px;
+        width: 24px;
+        position: absolute;
+        top: .6em; }
 
 .patrocinadores {
+  padding: 1px 0;
+  background: white;
   text-align: center; }
 
 .pantalla {
@@ -338,14 +434,48 @@ footer {
   -ms-filter: grayscale(100%);
   -moz-filter: grayscale(100%);
   filter: grayscale(100%); }
-.imagenes-p li:hover {
-  -webkit-filter: grayscale(0%);
-  -ms-filter: grayscale(0%);
-  -moz-filter: grayscale(0%);
-  filter: grayscale(0%); }
+  .imagenes-p li:hover {
+    -webkit-filter: grayscale(0%);
+    -ms-filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+    filter: grayscale(0%); }
+
+.button {
+  color: white;
+  background: #E65100;
+  border-radius: 0.3em;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+  padding: 1em;
+  width: 200px;
+  text-decoration: none;
+  -webkit-transition: background 0.4s ease-in-out;
+  -moz-transition: background 0.4s ease-in-out;
+  transition: background 0.4s ease-in-out;
+  -webkit-transition: color 0.4s ease-in-out;
+  -moz-transition: color 0.4s ease-in-out;
+  transition: color 0.4s ease-in-out; }
+  .button:hover {
+    background: #ff7b34; }
+  .button.btninscripcion {
+    background: #2E486D;
+    border: 1px solid white; }
+    .button.btninscripcion:hover {
+      background: white;
+      color: #2E486D; }
 
 @media (max-width: 800px) {
   .contacto-datos {
-    text-align: center; } }
+    text-align: center; }
+
+  .carrera-hero h2 {
+    font-size: 4em; } }
+@media (max-width: 480px) {
+  nav {
+    display: none; }
+
+  .carrera-hero h2 {
+    font-size: 3em; } }
 
 /*# sourceMappingURL=stye.css.map */
