--- a/carreralasalamedas/scss/style.scss
+++ b/carreralasalamedas/scss/style.scss
@@ -20,7 +20,6 @@ $breakpoint-medium: "only screen and (min-width: 30em)";
 
 
 body{
-    background:$back;
     margin: 0;
     font-family:"Lato";
     font-weight:400;  
@@ -193,6 +192,14 @@ footer{
     }
 }
 
+.mapa{
+    display: block;
+    width: 100%;
+    border: 1px solid #333;
+    max-width:900px;
+    margin: 0 auto;
+   margin-bottom: 1em;
+}
 .inscripcion{
     color: white;
     padding:1em 0;
